--- a/docs/economy/macro/situation/Japan/240319.md
+++ b/docs/economy/macro/situation/Japan/240319.md
@@ -9,15 +9,7 @@
 - 日本央行
 - 东京地检特搜部
 
-## 市场反应
-
-### 汇率不升反跌？
-
-日本央行 17 年来首次加息，为何日元汇率反而跌破 150 关口？
-
-<https://www.zhihu.com/question/649226711/answer/3437071944>
-
-## 主要观点
+## 为什么加息？
 
 ### 收割论
 
@@ -43,10 +35,25 @@
 
 ### 美日结合论
 
+![alt text](img/image-2.png)
+
 ::: info 观点： <https://www.bilibili.com/video/BV1tz421o7gU/> 评论区（palmebaum）
 美联储加息是张开血盆大口吸取全世界的美元流向美国，那日元加息则是配合美国又开了一个吸钱的口子，但美元日元汇率的倒挂，导致美国并没有损失，因为是从汇率对比中得到补偿，现在的情形就像美日是两个涡轮，而且可以相互对流，吸取全世界的资金，如果我这个认识正确的话，那美国那边的高利率可能真的还会持续，因为有了日本这个口子，资金的流转空间更大了，结合俄罗斯的恐怖袭击，俄乌那边如果升级，那欧洲的汇率对美元一定是疲软的，欧洲的资金可能会进一步流向美国（或是不是我们这里不好说），现在美国人最不想的就是美元汇率下降，要求美元坚挺，尽管手里有着天量的美元，但是其实外面流通的美元是有限的，最想干的就是世界全部的美元都回到美国，现在又加了个日本，日本一边加息，一边量化宽松，搞财政赤字化，美日两个国家开动印钞机印钞票。而我们赚的美元不是印刷出来的，是我们的血汗钱啊。难就难在这里了，什么时候建立我们自己大范围的资金流动体系，能不受美元影响，至少不受他们恶意的影响，我们的日子会好过不少。
 
 :::
+
+
+
+## 市场反应
+
+### 汇率不升反跌？
+
+日本央行 17 年来首次加息，为何日元汇率反而跌破 150 关口？
+
+<https://www.zhihu.com/question/649226711/answer/3437071944>
+
+
+## 导致什么结果？
 
 ## 我的观点
 
