--- a/docs/work/devices/oray/R300.md
+++ b/docs/work/devices/oray/R300.md
@@ -1,5 +1,11 @@
 # 蒲公英 R300A
 
+## 产品信息
+
 ![alt text](./img/r300tupian.png)
 
 使用教程：<https://service.oray.com/question/10623.html>
+
+## 天线延长线
+
+![alt text](img/7dfa6ea5c9bbfd3d262759062372055.jpg)
