--- a/docs/iot/computer/composition/01.md
+++ b/docs/iot/computer/composition/01.md
@@ -4,8 +4,107 @@
 
 ![alt text](img/image-22.png)
 
-## 总线与 IO 设备
+### 总线
 
-## 存储器
+#### 总线的概述
 
-## CPU
+![alt text](img/image-23.png)
+
+![alt text](img/image-24.png)
+
+为什么设计总线？
+
+![alt text](img/image-25.png)
+
+![alt text](img/image-26.png)
+
+![alt text](img/image-27.png)
+
+![alt text](img/image-28.png)
+
+![alt text](img/image-29.png)
+
+![alt text](img/image-30.png)
+
+![alt text](img/image-31.png)
+
+#### 总线的仲裁
+
+总线仲裁的原因？
+
+![alt text](img/image-32.png)
+
+仲裁方法
+
+![alt text](img/image-33.png)
+
+![alt text](img/image-34.png)
+
+![alt text](img/image-35.png)
+
+![alt text](img/image-36.png)
+
+![alt text](img/image-37.png)
+
+![alt text](img/image-38.png)
+
+![alt text](img/image-39.png)
+
+![alt text](img/image-40.png)
+
+### 输入输出设备
+
+::: info 本章主要内容：
+
+1. 常见的输入/输出设备
+
+   - 字符输入设备
+   - 图形输入设备
+   - 图像输出设备
+
+2. 输入输出接口的通用设计
+   - 设计原则
+   - 通用设计方式
+3. CUP 与 IO 设备的通讯
+   - 程序中断
+   - DMA（直接存储器访问）
+
+:::
+
+#### 常见的输入/输出设备
+
+字符输入设备：键盘
+
+![alt text](img/image-41.png)
+
+![alt text](img/image-42.png)
+
+![alt text](img/image-43.png)
+
+![alt text](img/image-44.png)
+
+![alt text](img/image-45.png)
+
+#### 接口的通用设计
+
+![alt text](img/image-46.png)
+
+![alt text](img/image-47.png)
+
+#### CUP 与 IO 设备的通讯
+
+![alt text](img/image-48.png)
+
+![alt text](img/image-49.png)
+
+![alt text](img/image-50.png)
+
+![alt text](img/image-51.png)
+
+![alt text](img/image-52.png)
+
+![alt text](img/image-53.png)
+
+### 存储器
+
+### CPU
