--- a/docs/RD/node/nest/book-admin/02.md
+++ b/docs/RD/node/nest/book-admin/02.md
@@ -350,6 +350,8 @@ ForbiddenException
 
 ## 数据库
 
+![alt text](img/image.png)
+
 ### 模块划分
 
 模块：<https://nest.nodejs.cn/modules>
@@ -377,7 +379,7 @@ export class CatsController {
 }
 ```
 
-将 string 类型转换为 number 类型
+ParseIntPipe 将 string 类型转换为 number 类型
 
 ### 数据库连接
 
@@ -557,6 +559,32 @@ export class CreateUserDto {
 ![alt text](./img/createuser.png)
 
 ### 删除用户
+
+方法：Delete
+
+路径：/user/:id
+
+参数：id
+
+#### service
+
+```js
+remove(id: number): Promise<DeleteResult> {
+  return this.userRepository.delete({ id });
+}
+```
+
+#### controller
+
+```js
+@Delete(':id')
+remove(@Param('id', ParseIntPipe) id: number) {
+  console.log(id);
+  return this.userService.remove(id);
+}
+```
+  
+
 
 ## 环境准备
 
