--- a/docs/RD/node/nest/book-admin/03.md
+++ b/docs/RD/node/nest/book-admin/03.md
@@ -281,6 +281,12 @@ canActivate:  ExecutionContextHost {
 
 ### 校验逻辑
 
+安装md5
+
+```bash
+pnpm i -S md5
+```
+
 ### JWT
 
 #### 生成 token
@@ -288,6 +294,28 @@ canActivate:  ExecutionContextHost {
 ![alt text](./img/tokenimage.png)
 
 #### 统一格式
+
+/utils/index.ts
+
+```ts
+export function success(data, msg) {
+  return {
+    code: 0,
+    data,
+    msg,
+  };
+}
+
+export function error(msg) {
+  return {
+    code: -1,
+    msg,
+  };
+}
+
+```
+
+![alt text](img/image-1.png)
 
 ## 前后端联调
 
@@ -316,3 +344,6 @@ D:\project\zhenpath\vue-vben-admin-2.10\internal\vite-config\src\config\common.t
     // drop: ['console', 'debugger'],
   },
 ```
+
+
+![alt text](img/image-2.png)
