--- a/docs/RD/node/nest/book-admin/04.md
+++ b/docs/RD/node/nest/book-admin/04.md
@@ -8,6 +8,8 @@
 
 ### 流程分析
 
+![alt text](img/image-3.png)
+
 // 权限全局配置
 const permissionStore = usePermissionStore();
 
@@ -17,6 +19,14 @@ const routes = await permissionStore.buildRoutesAction();
 ### 处理逻辑
 
 关键函数：buildRoutesAction()
+
+src/store/modules/permission.ts
+
+![alt text](img/image-4.png)
+
+
+
+
 
 // 对非一级路由进行过滤
 routes = filter(asyncRoutes, routeFilter);
